[package]
name = "apt-cache"
version = "0.1.0"
authors = ["Hayden Hughes <hayden@vulpes.chickenkiller.com>"]
edition = "2018"
description = "A rust crate to interface the apt-cache command"
license = "MIT"
repository = "https://github.com/hugglesfox/apt-cache"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
